Re-created EventServiceImpl tests. Some code refactoring is done.